--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Custom styles for this template -->
     <link href="centershadenav.css" rel="stylesheet">
 
-    <title>Centershadenav 0.1.1</title>
+    <title>Centershadenav 0.1.2</title>
   </head>
   <body>
     <div class="sn-static">
@@ -88,6 +88,6 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="centerslidenav.js"></script>
+    <script src="slidenav.js"></script>
   </body>
 </html>
